--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="COOP - Voting System"
 APP_ENV=local
-APP_KEY=base64:aVX8p5SPNU9E+cPa3Irj6D/uEpVxvWFEl74rOWVqF5I=
+APP_KEY=base64:Ord2/cet+YWgduucgdEmyWToNmn/bKidxb0DE0P2s74=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000/
 
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=f0f575eb680523
+MAIL_PASSWORD=a7bb7c8e72f8e8
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=info.coop@poea.gov.ph
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
