--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=fd6cb7ecee10616df79e",
+    "/css/app.css": "/css/app.css?id=825384e2d8a61de46975"
 }
