--- a/public/web.config
+++ b/public/web.config
@@ -5,6 +5,14 @@
 -->
 <configuration>
   <system.webServer>
+
+<modules>
+    <remove name="WebDAVModule" />
+</modules>
+<handlers>
+    <remove name="WebDAV" />
+</handlers>
+
     <rewrite>
       <rules>
         <rule name="Imported Rule 1" stopProcessing="true">
