--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME="COOP - Voting System"
 APP_ENV=local
 APP_KEY=base64:Ord2/cet+YWgduucgdEmyWToNmn/bKidxb0DE0P2s74=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000/
+APP_URL=http://localhost:8000
+SANCTUM_STATEFUL_DOMAINS=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
