--- a/public/web.config
+++ b/public/web.config
@@ -32,5 +32,13 @@
         </rule>
       </rules>
     </rewrite>
+        <security>
+            <requestFiltering>
+                <verbs>
+                    <add verb="DELETE" allowed="true" />
+                    <add verb="PUT" allowed="true" />
+                </verbs>
+            </requestFiltering>
+        </security>
   </system.webServer>
 </configuration>
