Added Email and SMS OTP

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0b1a886ca5188d10b629",
+    "/css/app.css": "/css/app.css?id=e85f646ef33981c0fd0a"
 }
