--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
         "@inertiajs/inertia": "^0.8.4",
         "@inertiajs/inertia-vue3": "^0.3.5",
         "@inertiajs/progress": "^0.2.4",
-        "@tailwindcss/forms": "^0.2.1",
-        "@tailwindcss/typography": "^0.3.0",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.4",
         "@vue/compiler-sfc": "^3.0.5",
+        "autoprefixer": "^10.4.8",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.1",
+        "postcss": "^8.4.16",
+        "postcss-import": "^14.1.0",
+        "tailwindcss": "^3.1.8",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "sweetalert2": "^10.16.6"
+        "sweetalert2": "^10.16.6",
+        "vue3-tel-input": "^1.0.4"
     }
 }
