Updated: .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME="COOP - Voting System"
 APP_ENV=local
 APP_KEY=base64:Ord2/cet+YWgduucgdEmyWToNmn/bKidxb0DE0P2s74=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
-SANCTUM_STATEFUL_DOMAINS=http://localhost:8000
+APP_URL=http://localhost:8001
+SANCTUM_STATEFUL_DOMAINS=http://localhost:8001
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -12,8 +12,8 @@ DB_CONNECTION=sqlsrv
 DB_HOST=127.0.0.1
 DB_PORT=1433
 DB_DATABASE=COOPDB
-DB_USERNAME=elazaro3
-DB_PASSWORD=secret
+DB_USERNAME=elazaro
+DB_PASSWORD=admin123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=f0f575eb680523
-MAIL_PASSWORD=a7bb7c8e72f8e8
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=pempco@dmw.gov.ph
+MAIL_PASSWORD=Vus38746
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=info.coop@poea.gov.ph
+MAIL_FROM_ADDRESS=pempco@dmw.gov.ph
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -48,3 +48,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#AC7a6932068fe482fe8e1a728ff479c3a1
+#4f3e55764e566a08788b82f69427dca0
+#+19134044403
+TWILIO_SID=AC7a6932068fe482fe8e1a728ff479c3a1
+TWILIO_AUTH_TOKEN=4f3e55764e566a08788b82f69427dca0
+TWILIO_PHONE_NUMBER=+19134044403
+#TWILIO_PHONE_NUMBER=+639933758227
