--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 #AC7a6932068fe482fe8e1a728ff479c3a1
 #4f3e55764e566a08788b82f69427dca0
 #+19134044403
-TWILIO_SID=AC7a6932068fe482fe8e1a728ff479c3a1
-TWILIO_AUTH_TOKEN=4f3e55764e566a08788b82f69427dca0
-TWILIO_PHONE_NUMBER=+19134044403
-#TWILIO_PHONE_NUMBER=+639933758227
+TWILIO_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
